# yasos

./: .autotools  .cproject  .gitattributes  .project  1.asm  2qa  CMakeCache.txt  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  a.out  app  cmake_install.cmake  compile_commands.json  install.sh  log.txt  main.asm  main.bp  main.s  out  out.asm  script.bp  t.txt  test.asm  test.bp  test.s  ç
.cache/clangd/index/: error.cc.71DB44FBDE1EC19D.idx  error.hh.5E094788E923645E.idx  error.hpp.C357CCD63B39876B.idx  generation.cc.28D71F48189E777F.idx  generation.hh.65EBCE939EE2B688.idx  generation.hpp.92F855FD278B71AA.idx  global.hh.62E16390586EF6C1.idx  global.hpp.3D8289353EED5626.idx  lexer.cc.D02E0B3B6D9332A0.idx  lexer.hh.B75932A285C33BCB.idx  (+6 more)
docs/: index.md  installation.md  language.md
docs/language/: basic_syntax.md  compile.md  functions.md  loops.md  operators.md  types.md  variables.md
examples/: color.bp  randi.bp  so.c
modules/: Makefile  app  byte.s  byte.ys  date.ys  debug.s  debug.ys  file.c  filesys.c  filesys.s  filesys.ys  highmath.s  highmath.ys  highstd.ll  highstd.s  highstd.ys  highstring.ll  highstring.s  highstring.ys  lowmath.c  lowos.c  lowstd.c  lowstring.c  main.ys  math.c  math.cpp  math.h  mem.c  mem.h  process.c  std.c  std.cpp  std.h  string.c  string.h  sys.s  vector.c  vector.h  vector.s  vector.ys
modules/headers/: byte.ys  date.ys  debug.ys  filesys.ys  math.ys  mem.ys  os.ys  std.ys  string.ys  vector.ys
modules/temporal_disabled/: filesys.t
src/: error.cc  error.cpp  error.hh  generation.cc  generation.cpp  generation.hh  generation.hpp  global.hh  global.hpp  lexer.cc  lexer.hh  lexer.rs  main.cc  main.cpp  main.rs  parser.cc  parser.cpp  parser.hh  parser.hpp  parser.rs  tokenization.cc  tokenization.cpp  tokenization.hh  tokenization.hpp
src/functions/: standard.asm  standard.cpp  standard.hpp  std  std.asm
syntax_highlighting/: beeplang.yaml  yasos.vim
(+2 files in other folders)
